--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <section class= containerG>
-    <div class=" twoG "><img  class=img src="image\tanjore-periya-kovil.jpg" alt="" width="500px"></div>
+    <div class=" twoG "><img  class=img src="image\tanjore-periya-kovil.jpg" alt="" width="500px">
+    <span></span></div>
     <div class=" oneG " ></div>
     
     </section>
