--- a/home.html
+++ b/home.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
-    
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>home</title>
+
    <link rel="stylesheet" href="home.css">
 </head>
+
 <body>
-   <div class="background-image"><img src="image\wp7778818.png" alt=""></div>
+   
+
+   <section class="container">
+      <div class="states"><a href="states.html" >STATES</a></div>
+      <div class="login"><a href="login.html">LOGIN</a></div>
+   </section>
+   <div class="image"><img src="image\wp7778818.png" alt="" width="600px"></div>
+   <div class="INFO">TAMIL NADU PLACES INFO</div>
+
 </body>
 
 </html>
