--- a/index.html
+++ b/index.html
@@ -7,10 +7,22 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div class="home"><a href="home.html">HOME</a></div>
     <section class= containerG>
     <div class=" twoG "><img  class=img src="image\tanjore-periya-kovil.jpg" alt="" width="500px">
-    <span></span></div>
-    <div class=" oneG " ></div>
+    <br><span class = text>
+    The Peruvudaiyar Temple[17] is located in the city of Thanjavur, about 350 kilometres (220 mi) 
+    southwest of Chennai. The city is connected daily to other major cities by the network of Indian
+    Railways,Tamil Nadu bus services and the National Highways 67, 45C, 226 and 226 Extn.[18][19]Thenearest airport with regular services is Tiruchirappalli International Airport (IATA: TRZ), about<br> 
+    55 kilometres (34 mi) away.[20]
+    The city and the temple though inland, are at the start of the Kaveri River delta, thus with access 
+     to the Bay of Bengal and through it to the Indian Ocean. Along with the temples, the Tamil people 
+     completed the first major irrigation network in the 11th century for agriculture, for movement of 
+     goods and to control the water flow through the urban center.[21]
+    </span></div>
+    <div class=" oneG " ><img  class=img src="image\tanjore-periya-kovil.jpg" alt="" width="500px"></div>
+    <div class=" threeG " ><img  class=img src="image\tanjore-periya-kovil.jpg" alt="" width="500px"></div>
+    <div class=" fourG " ><img  class=img src="image\tanjore-periya-kovil.jpg" alt="" width="500px"></div>
     
     </section>
 </body>
