--- a/home.html
+++ b/home.html
@@ -13,8 +13,10 @@
    
 
    <section class="container">
+      
       <div class="states"><a href="states.html" >STATES</a></div>
       <div class="login"><a href="login.html">LOGIN</a></div>
+      <div class="recommended"><a href="spot.html">HIGHLY RATED SPOTS</a></div>
    </section>
    <div class="image"><img src="image\wp7778818.png" alt="" width="600px"></div>
    <div class="INFO">TAMIL NADU PLACES INFO</div>
