--- a/index.html
+++ b/index.html
@@ -1,29 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Town</title>
     <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
     <div class="home"><a href="home.html">HOME</a></div>
-    <section class= containerG>
-    <div class=" twoG "><img  class=img src="image\tanjore-periya-kovil.jpg" alt="" width="500px">
-    <br><span class = text>
-    The Peruvudaiyar Temple[17] is located in the city of Thanjavur, about 350 kilometres (220 mi) 
-    southwest of Chennai. The city is connected daily to other major cities by the network of Indian
-    Railways,Tamil Nadu bus services and the National Highways 67, 45C, 226 and 226 Extn.[18][19]Thenearest airport with regular services is Tiruchirappalli International Airport (IATA: TRZ), about<br> 
-    55 kilometres (34 mi) away.[20]
-    The city and the temple though inland, are at the start of the Kaveri River delta, thus with access 
-     to the Bay of Bengal and through it to the Indian Ocean. Along with the temples, the Tamil people 
-     completed the first major irrigation network in the 11th century for agriculture, for movement of 
-     goods and to control the water flow through the urban center.[21]
-    </span></div>
-    <div class=" oneG " ><img  class=img src="image\tanjore-periya-kovil.jpg" alt="" width="500px"></div>
-    <div class=" threeG " ><img  class=img src="image\tanjore-periya-kovil.jpg" alt="" width="500px"></div>
-    <div class=" fourG " ><img  class=img src="image\tanjore-periya-kovil.jpg" alt="" width="500px"></div>
-    
+    <section class=containerG>
+        <div class=" twoG ">
+            <SPAN CLASS="text">
+                <H3>Thanjavur</H3>
+            </SPAN>
+            <img class=img src="image\tanjore-periya-kovil.jpg" alt="" width="500px">
+            <br><span class=text>
+                <H3>Thanjavur-Periya-Kovil</H3>
+                The Peruvudaiyar Temple[17] is located in the city of Thanjavur, about 350 kilometres (220 mi)
+                southwest of Chennai. The city is connected daily to other major cities by the network of Indian
+                Railways,Tamil Nadu bus services and the National Highways 67, 45C, 226 and 226 Extn.[18][19]Thenearest
+                airport with regular services is Tiruchirappalli International Airport (IATA: TRZ), about<br>
+                55 kilometres (34 mi) away.[20]
+                The city and the temple though inland, are at the start of the Kaveri River delta, thus with access
+                to the Bay of Bengal and through it to the Indian Ocean. Along with the temples, the Tamil people
+                completed the first major irrigation network in the 11th century for agriculture, for movement of
+                goods and to control the water flow through the urban center.[21]
+            </span>
+        </div>
+        <div class=" oneG ">
+            <SPAN CLASS="text">
+                <H3>Rameswaram</H3>
+            </SPAN>
+            <img class=img src="image\Dhanushkodi-f.avif" alt="" width="500px" height="250PX">
+            <SPAN CLASS="text">
+                <H3>Dhanshkodi</H3>
+            </SPAN>
+        </div>
+        <div class=" threeG ">
+            <SPAN CLASS="text">
+                <H3>Kanyakumari</H3>
+            </SPAN>
+            <img class=img src="image\thiruvalluvar_statue_at_kanyakumari_01.jpg" alt="" width="500px"
+                height="250px">
+            <SPAN CLASS="text">
+                <H3>Thiruvalluvar Statue</H3>
+            </SPAN>
+        </div>
+        <div class=" fourG ">
+            <SPAN CLASS="text">
+                <H3>Kollimalai</H3>
+            </SPAN>
+            <img class=img src="image\KOLLI-HILLS.jpg" alt="" width="500px">
+            <SPAN CLASS="text">
+                <H3>Kolli Hills</H3>
+            </SPAN>
+        </div>
+
     </section>
 </body>
+
 </html>
