--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-    <div class="home"><a href="home.html">HOME</a></div>
+    <div class="home"><a id="om"  href="home.html">HOME</a></div>
     <section class=containerG>
         <div class=" twoG ">
             <SPAN CLASS="text">
                 <H3>Thanjavur</H3>
             </SPAN>
-            <img class=img src="image\tanjore-periya-kovil.jpg" alt="" width="500px">
+            <img class=image-container src="image\tanjore-periya-kovil.jpg" alt="" width="500px">
             <br><span class=text>
                 <H3>Thanjavur-Periya-Kovil</H3>
                 The Peruvudaiyar Temple[17] is located in the city of Thanjavur, about 350 kilometres (220 mi)
@@ -59,6 +59,7 @@
         </div>
 
     </section>
+    <marquee CLASS="thankyou" behavior="" direction="">THANK YOU</marquee>
 </body>
 
 </html>
