--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
             <img class=img src="image\Dhanushkodi-f.avif" alt="" width="500px" height="250PX">
             <SPAN CLASS="text">
                 <H3>Dhanshkodi</H3>
+                Dhanushkodi is a ghost town located at the southeastern tip of Pamban Island in Tamil Nadu, India. It was destroyed
+                 by a cyclone in 1964, which led to the loss of thousands of lives and the abandonment of the town. Today, it remains
+                  uninhabited, serving as a haunting reminder of the power of nature. The ruins of Dhanushkodi attract tourists 
+                  interested in its eerie history and the breathtaking natural beauty of its surroundings.
             </SPAN>
         </div>
         <div class=" threeG ">
@@ -46,6 +50,11 @@
                 height="250px">
             <SPAN CLASS="text">
                 <H3>Thiruvalluvar Statue</H3>
+                The Thiruvalluvar Statue is a massive stone sculpture dedicated to the Tamil poet and philosopher Thiruvalluvar, who is 
+                renowned for his work "Thirukkural." Located on a small island near Kanyakumari in the Indian state of Tamil Nadu, the 
+                statue stands at a height of 133 feet (40.6 meters), representing the 133 chapters of the Thirukkural. It was unveiled 
+                on January 1, 2000, and has since become a prominent landmark and tourist attraction, offering stunning views of the 
+                confluence of the Arabian Sea, the Bay of Bengal, and the Indian Ocean.
             </SPAN>
         </div>
         <div class=" fourG ">
@@ -55,6 +64,12 @@
             <img class=img src="image\KOLLI-HILLS.jpg" alt="" width="500px">
             <SPAN CLASS="text">
                 <H3>Kolli Hills</H3>
+                Kolli Hills is a picturesque mountain range located in the Eastern Ghats of Tamil Nadu, India. Known for its lush greenery, 
+                serene waterfalls, and winding roads, Kolli Hills is a popular tourist destination, especially for nature lovers and 
+                adventure enthusiasts. The highest peak in the range is called Akasa Ganga, standing at around 4,265 feet (1,300 meters)
+                above sea level. Apart from its natural beauty, Kolli Hills is also famous for the Arapaleeswarar Temple, dedicated to Lord 
+                Shiva, which attracts pilgrims and tourists alike. The region is also renowned for its medicinal herbs and is often referred
+                to as the "Healing Hills" due to the presence of several medicinal plants.
             </SPAN>
         </div>
 
